--- a/Woofer_client/Index.html
+++ b/Woofer_client/Index.html
@@ -26,6 +26,7 @@
       <div class="loading">
         <img src="loading.gif" width="50px" height="50px" alt="loading" />
       </div>
+      <div class="woof"></div>
     </main>
     <script src="client.js"></script>
   </body>
